CompatHelper: bump compat for OrdinaryDiffEq to 6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ Ipopt = "0.9.1"
 JuMP = "0.22.3"
 MathOptInterface = "0.10.9"
 MathProgBase = "0.7.8"
-OrdinaryDiffEq = "5.60.1"
+OrdinaryDiffEq = "5.60.1, 6"
 QuasiMonteCarlo = "0.2.3"
 RecursiveArrayTools = "2.17.2"
 SCIP = "0.10.1"
