--- a/Project.toml
+++ b/Project.toml
@@ -47,7 +47,7 @@ Distances = "0.10.7"
 Documenter = "0.27.15"
 DocumenterTools = "0.1.13"
 GLPK = "0.15.3"
-HiGHS = "0.3.2"
+HiGHS = "0.3.2, 1"
 Ipopt = "0.9.1"
 JuMP = "0.22.3"
 MathOptInterface = "0.10.9"
