--- a/Project.toml
+++ b/Project.toml
@@ -46,7 +46,7 @@ DiffEqSensitivity = "6.52.1"
 Distances = "0.10.7"
 Documenter = "0.27.15"
 DocumenterTools = "0.1.13"
-GLPK = "0.15.3"
+GLPK = "0.15.3, 1"
 HiGHS = "0.3.2"
 Ipopt = "0.9.1"
 JuMP = "0.22.3"
