CompatHelper: bump compat for SCIP to 0.11, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -55,7 +55,7 @@ MathProgBase = "0.7.8"
 OrdinaryDiffEq = "5.60.1"
 QuasiMonteCarlo = "0.2.3"
 RecursiveArrayTools = "2.17.2"
-SCIP = "0.10.1"
+SCIP = "0.10.1, 0.11"
 Statistics = "1.4.0"
 StatsBase = "0.33.8"
 YAML = "0.4.7"
