CompatHelper: bump compat for MathOptInterface to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ GLPK = "0.15.3"
 HiGHS = "0.3.2"
 Ipopt = "0.9.1"
 JuMP = "0.22.3"
-MathOptInterface = "0.10.9"
+MathOptInterface = "0.10.9, 1"
 MathProgBase = "0.7.8"
 OrdinaryDiffEq = "5.60.1"
 QuasiMonteCarlo = "0.2.3"
