CompatHelper: bump compat for JuMP to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ DocumenterTools = "0.1.13"
 GLPK = "0.15.3"
 HiGHS = "0.3.2"
 Ipopt = "0.9.1"
-JuMP = "0.22.3"
+JuMP = "0.22.3, 1"
 MathOptInterface = "0.10.9"
 MathProgBase = "0.7.8"
 OrdinaryDiffEq = "5.60.1"
