--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 [compat]
 BenchmarkTools = "1.1.1"
 CSV = "0.10.3"
-Cbc = "0.9.1"
+Cbc = "0.9.1, 1"
 Clp = "0.9.1"
 Clustering = "0.14.2"
 Combinatorics = "1.0.2"
