CompatHelper: bump compat for Ipopt to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ Documenter = "0.27.15"
 DocumenterTools = "0.1.13"
 GLPK = "0.15.3"
 HiGHS = "0.3.2"
-Ipopt = "0.9.1"
+Ipopt = "0.9.1, 1"
 JuMP = "0.22.3"
 MathOptInterface = "0.10.9"
 MathProgBase = "0.7.8"
